# DateReg-lib-hs

./: README.md  date-reg-api.cabal
app/: Main.hs
examples/: BasicExample.hs
src/: DateRegAPI.hs
src/DateRegAPI/: Cache.hs  Client.hs  Core.hs  Errors.hs  Models.hs  Types.hs
