cabal-version: 3.0
name:          date-reg-api
version:       1.0.0
synopsis:      Haskell client for DateRegBot API
description:   A Haskell library for interacting with DateRegBot API to get Telegram user registration dates and resolve usernames.
license:       MIT
author:        CodWiz
maintainer:    codwiz@yandex.ru
build-type:    Simple
extra-source-files: README.md

library
  exposed-modules:
      DateRegAPI
    , DateRegAPI.Core
    , DateRegAPI.Types
    , DateRegAPI.Models
    , DateRegAPI.Cache
    , DateRegAPI.Client
    , DateRegAPI.Errors
  hs-source-dirs:   src
  build-depends:
      base >=4.14 && <5
    , aeson >=2.0
    , text >=1.2
    , time >=1.9
    , http-client >=0.7
    , http-client-tls >=0.3
    , http-types >=0.12
    , bytestring >=0.10
    , unordered-containers >=0.2
    , hashable >=1.3
    , containers >=0.6
    , exceptions >=0.10
    , mtl >=2.2
    , transformers >=0.5
    , data-default >=0.7
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable main-example
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base
    , date-reg-api
    , text
    , aeson
    , data-default
    , mtl
  default-language: Haskell2010

test-suite date-reg-api-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
      base
    , date-reg-api
    , hspec >=2.0
    , text
  default-language: Haskell2010

executable basic-example
  main-is:          BasicExample.hs
  hs-source-dirs:   examples
  build-depends:
      base
    , date-reg-api
    , text
    , data-default
    , mtl
  default-language: Haskell2010